also zero BigInteger signum field, warn on reflection failure